assets/css/style.scss
---
primary-color: #73B1BE
secondary-color: #9EE9F8
---

@import "{{ site.theme }}";

/* Globals */
body {
    background: #2B2F3B;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

hr {
    border-bottom: 1px dashed #9EE9F8;
    color: #9EE9F8;
}

h1, h2, h3, h4, h5, h6 {
    color: #9EE9F8;
}

a {
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

/* Header */
header {
    background: #2F3240;
    border-bottom: 1px dashed #73B1BE;
    padding: 10px 0;
}

header h1, header h2 {
    color: #73B1BE;
}

@keyframes on-highlight-animation {
    from {color: #73B1BE;}
    to {color: #9EE9F8;}
}
@keyframes off-highlight-animation {
    from {color: #9EE9F8;}
    to {color: #73B1BE;}
}
header h1:hover {
    animation-name: on-highlight-animation;
    animation-duration: 1s;
    animation-fill-mode: forwards;
}
header h1 {
    animation-name: off-highlight-animation;
    animation-duration: 1s;
    animation-fill-mode: forwards;
}

header h2 {
    margin: -1vh 0 0 -1.75vh;
}

header h1:before {
    content: "./";
}

#title {
    cursor: pointer;
}

/* Content */
.pages-container {
    margin-left: auto;
    margin-top: auto;
}

.container {
    max-width: none;
    display: flex;
}

#page-content {
    max-width: 700px;
    margin: auto;
}

#main-content {
    min-height: 100%;
    width: 100%;
    -webkit-font-smoothing: antialiased;
}

#main-content h2 {
    font-size: 24px;
}

/* Footer */
.footer {
    color: #73B1BE;
    text-align: right;
    margin-top: auto;
    padding: 30px;
    border-top: 1px dashed #73B1BE;
}

/* Icons */
.octicon {
    display: inline-block;
    vertical-align: bottom;
    fill: currentcolor;
    margin: 5px;
}

.clickable-icons:hover {
    animation-name: on-highlight-animation;
    animation-duration: 0.1s;
    animation-fill-mode: forwards;
}

.clickable-icons:not {
    animation-name: off-highlight-animation;
    animation-duration: 0.1s;
    animation-fill-mode: forwards;
}

#index-title {
    text-align: center;
    margin: 5% 0 5% 0;
}

.main-icons {
    display: flex;
    text-align: center;
    justify-content: center;
}

#about-me-icon {
    cursor: pointer;
    color: #73B1BE;
}
#about-me-icon:hover {
    animation-name: on-highlight-animation;
    animation-duration: 1s;
    animation-fill-mode: forwards;
}
#about-me-icon:not {
    animation-name: off-highlight-animation;
    animation-duration: 1s;
    animation-fill-mode: forwards;
}

#my-github-icon {
    cursor: pointer;
    color: #73B1BE;
}
#my-github-icon:hover {
    animation-name: on-highlight-animation;
    animation-duration: 1s;
    animation-fill-mode: forwards;
}
#my-github-icon:not {
    animation-name: off-highlight-animation;
    animation-duration: 1s;
    animation-fill-mode: forwards;
}

#my-email-icon {
    cursor: pointer;
    color: #73B1BE;
}
#my-email-icon:hover {
    animation-name: on-highlight-animation;
    animation-duration: 1s;
    animation-fill-mode: forwards;
}
#my-email-icon:not {
    animation-name: off-highlight-animation;
    animation-duration: 1s;
    animation-fill-mode: forwards;
}

